--- a/style/style.css
+++ b/style/style.css
@@ -193,3 +193,13 @@ table.yearname tr td a.commonTopRightLinks img{
 .error{
 	color:#FF0000;
 }
+.lumia_event_wrapper{
+	position:relative;
+}
+.ajax_loader{
+	display:none;
+	background:url(../images/spinnerlarge.gif) no-repeat center center;
+	width:100%;
+	height:100%;
+	position:absolute;
+}
